<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/setting_header"
        android:textFontWeight="100"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:text="@string/setting_subheader_1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/setting_subheader_2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationSubText" />

    <TextView
        android:id="@+id/notificationSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/setting_subtext_1"
        android:textColor="#656565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationText" />

    <TextView
        android:id="@+id/locationSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:text="@string/setting_subtext_2"
        android:textColor="#656565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationText" />

    <TextView
        android:id="@+id/locationNoticeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="36dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:maxLines="2"
        android:text="@string/setting_seekbar_text"
        android:textColor="#656565"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationSubText" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="59dp"
        android:layout_height="30dp"
        android:layout_marginEnd="24dp"
        android:onClick="onCheck"
        android:textColorHint="@color/background"
        android:thumbTint="@color/switchOnColor"
        android:trackTint="@color/switchOnColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toEndOf="@+id/notificationSubText"
        app:layout_constraintTop_toTopOf="@+id/notificationSubText" />

    <SeekBar
        android:id="@+id/locationSeekBar"
        android:layout_width="314dp"
        android:layout_height="26dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/seekbarColor"
        android:progressBackgroundTint="@color/seekbarColor"
        android:progressTint="@color/seekbarColor"
        android:thumbTint="@color/seekbarColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationNoticeText" />

    <TextView
        android:id="@+id/rangeValue"
        android:layout_width="103dp"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:text="@string/setting_seekbar_option_1"
        android:textColor="#656565"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationSeekBar" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bottom_navigation_background"
        android:elevation="8dp"
        app:itemIconSize="@dimen/icon_height"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>